--- a/styles/globals.css
+++ b/styles/globals.css
@@ -50,23 +50,40 @@ body {
 
 .correct{
   background-color: #6aaa64;
+  transition: all 0.5s ease;
 }
 .close{
   background-color: #c9b458;
+  transition: all 0.5s ease;
 }
 .incorrect{
   background-color: #939598;
+  transition: all 0.5s ease;
 }
 
 .refresh{
-  position: absolute;
+  position: relative;
   left: 50%;
-  bottom: 60px;
+  margin-top: 30px;
   transform: translateX(-50%);
-  font-size: 16px;
-  font-weight: 400;
+  font-size: 18px;
+  font-weight: 800;
   text-align: center;
+  padding: 5px 20px;
+  cursor: pointer;
+  background-color: #c9b458;
+  border: 1px solid black;
+  font-family: 'Alegreya',
+    serif;
+    transition: all 0.25s ease-in-out;
 }
+
+.refresh:hover{
+  background-color: #6aaa64;
+  color: white;
+  transition: all 0.25s ease-in-out;
+}
+
 .footer{
   height: 60px;
   position: absolute;
